[gd_scene load_steps=5 format=3 uid="uid://nwp7yxm7l2m0"]

[ext_resource type="Script" path="res://menus/Avatar_selection.gd" id="1_2koy5"]
[ext_resource type="FontFile" uid="uid://djgm5dobe81rq" path="res://UI/fonts/Play-Bold.ttf" id="2_hm5x8"]
[ext_resource type="FontFile" uid="uid://b8it623mylgpj" path="res://UI/fonts/Play-Regular.ttf" id="3_ns52p"]
[ext_resource type="Script" path="res://menus/get_avatars.gd" id="4_1i4hc"]

[node name="AvatarSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2koy5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HorizontalContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VerticalContainer" type="VBoxContainer" parent="Panel/HorizontalContainer"]
layout_mode = 2
theme_override_constants/separation = 70
alignment = 1

[node name="TitleMargin" type="MarginContainer" parent="Panel/HorizontalContainer/VerticalContainer"]
layout_mode = 2

[node name="AvatarTitle" type="Label" parent="Panel/HorizontalContainer/VerticalContainer/TitleMargin"]
layout_mode = 2
theme_override_colors/font_color = Color(0.843137, 0.301961, 0.631373, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_hm5x8")
theme_override_font_sizes/font_size = 30
text = "Choose your avatar"
horizontal_alignment = 1

[node name="AvatarGrid" type="GridContainer" parent="Panel/HorizontalContainer/VerticalContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 10
columns = 2

[node name="Avatar1" type="TextureButton" parent="Panel/HorizontalContainer/VerticalContainer/AvatarGrid"]
unique_name_in_owner = true
layout_mode = 2

[node name="Avatar2" type="TextureButton" parent="Panel/HorizontalContainer/VerticalContainer/AvatarGrid"]
unique_name_in_owner = true
layout_mode = 2

[node name="Avatar3" type="TextureButton" parent="Panel/HorizontalContainer/VerticalContainer/AvatarGrid"]
unique_name_in_owner = true
layout_mode = 2

[node name="Avatar4" type="TextureButton" parent="Panel/HorizontalContainer/VerticalContainer/AvatarGrid"]
unique_name_in_owner = true
layout_mode = 2

[node name="Avatar5" type="TextureButton" parent="Panel/HorizontalContainer/VerticalContainer/AvatarGrid"]
unique_name_in_owner = true
layout_mode = 2

[node name="Avatar6" type="TextureButton" parent="Panel/HorizontalContainer/VerticalContainer/AvatarGrid"]
unique_name_in_owner = true
layout_mode = 2

[node name="UsernameGrid" type="GridContainer" parent="Panel/HorizontalContainer/VerticalContainer"]
layout_mode = 2
theme_override_constants/v_separation = 20

[node name="UsernameStateLabel" type="Label" parent="Panel/HorizontalContainer/VerticalContainer/UsernameGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.843137, 0.301961, 0.631373, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_hm5x8")
theme_override_font_sizes/font_size = 24
text = "Give it a name"
horizontal_alignment = 1

[node name="Username" type="LineEdit" parent="Panel/HorizontalContainer/VerticalContainer/UsernameGrid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ns52p")
placeholder_text = "Sir Hiss"

[node name="ConfirmButton" type="Button" parent="Panel/HorizontalContainer/VerticalContainer/UsernameGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.843137, 0.301961, 0.631373, 1)
theme_override_fonts/font = ExtResource("2_hm5x8")
text = "Confirm"

[node name="LogoutButton" type="Button" parent="Panel/HorizontalContainer/VerticalContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.843137, 0.301961, 0.631373, 1)
theme_override_fonts/font = ExtResource("3_ns52p")
text = "Log Out"

[node name="GetAvatars" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_1i4hc")

[connection signal="pressed" from="Panel/HorizontalContainer/VerticalContainer/AvatarGrid/Avatar1" to="." method="_on_avatar_1_pressed"]
[connection signal="pressed" from="Panel/HorizontalContainer/VerticalContainer/AvatarGrid/Avatar2" to="." method="_on_avatar_2_pressed"]
[connection signal="pressed" from="Panel/HorizontalContainer/VerticalContainer/AvatarGrid/Avatar3" to="." method="_on_avatar_3_pressed"]
[connection signal="pressed" from="Panel/HorizontalContainer/VerticalContainer/AvatarGrid/Avatar4" to="." method="_on_avatar_4_pressed"]
[connection signal="pressed" from="Panel/HorizontalContainer/VerticalContainer/AvatarGrid/Avatar5" to="." method="_on_avatar_5_pressed"]
[connection signal="pressed" from="Panel/HorizontalContainer/VerticalContainer/AvatarGrid/Avatar6" to="." method="_on_avatar_6_pressed"]
[connection signal="pressed" from="Panel/HorizontalContainer/VerticalContainer/UsernameGrid/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="Panel/HorizontalContainer/VerticalContainer/LogoutButton" to="." method="_on_logout_button_pressed"]
